--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -29,5 +29,7 @@ jobs:
         ruby-version: 2.7.1
     - name: Install dependencies
       run: bundle install
+    - name: Create DB
+      run: bundle exec rails db:create && bundle exec rails db:migrate
     - name: Run tests
       run: bundle exec rspec
