--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -15,9 +15,16 @@ on:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
-
+    services:
+      postgres:
+        image: postgres:12
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: pguser
+          POSTGRES_PASSWORD: password
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby
@@ -31,7 +38,10 @@ jobs:
       run: bundle install
     - name: Install yarn-files
       run: yarn install --check-files
-    - name: Create DB
-      run: bundle exec rails db:create && bundle exec rails db:migrate
+    - name: Prepare database
+      run: |
+        cp -f config/database_ci.yml config/database.yml
+        bundle exec rails db:create
+        bundle exec rails db:migrate
     - name: Run tests
       run: bundle exec rspec
