--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2275,7 +2275,7 @@ Style/ArrayJoin:
 Style/AsciiComments:
   Description: 'Use only ascii symbols in comments.'
   StyleGuide: '#english-comments'
-  Enabled: true
+  Enabled: false
   VersionAdded: '0.9'
   VersionChanged: '0.52'
   AllowedChars: []
